adding css changes

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
     <title>Maze Game</title>
   </head>
   <body>
+    <h1>Maze Game</h1>
     <canvas id="mazecanvas" width="592" height="482"></canvas>
   </body>
   <script src="script.js"></script>
